[package]
name = "faces"
version = "0.1.23-1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Some primitives and a huge bunch of ready traits for any needs."
readme = "README.md"
authors = ["Ivan Chetchasov <vi.is.chapmann@gmail.com>"]
documentation = "https://docs.rs/faces/"
homepage = "https://github.com/vi-is-ramen/faces"
repository = "https://github.com/vi-is-ramen/faces"

[dependencies]
log = { version = "0.4.32", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
log = ["dep:log"]
